force-app/main/default/objects/Reminder_Configuration__mdt/Reminder_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configures multi-object pre and post reminder emails including object, due date field, email template, recipient sources and reminder offsets.</description>
    <label>Reminder Configuration</label>
    <pluralLabel>Reminder Configurations</pluralLabel>
</CustomObject>