force-app/main/default/objects/Reminder_Configuration__mdt/fields/Additional_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Additional_Filter_Criteria__c</fullName>
    <description>Optional SOQL WHERE fragment appended to the dynamic query with AND. Do not include the WHERE keyword. e.g. &quot;Status__c != &apos;Closed&apos;&quot; or &quot;IsClosed = false&quot;</description>
    <label>Additional Filter Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>