force-app/main/default/objects/Reminder_Configuration__mdt/fields/Batch_Size_Override__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size_Override__c</fullName>
    <description>Overrides the default batch size (200) for this configuration. Useful for objects with heavy field sets or complex queries. Leave blank to use the default.</description>
    <label>Batch Size Override</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>