force-app/main/default/objects/Reminder_Configuration__mdt/fields/Due_Date_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Field_API_Name__c</fullName>
    <description>API name of the Date or DateTime field on the object used to calculate reminder offsets. e.g. ActivityDate, EndDate, Due_Date__c</description>
    <label>Due Date Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>