force-app/main/default/objects/Reminder_Configuration__mdt/fields/Email_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_API_Name__c</fullName>
    <description>DeveloperName of the EmailTemplate record to use when sending reminders. e.g. Task_Due_Reminder_Template</description>
    <label>Email Template API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>