force-app/main/default/objects/Reminder_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master on/off switch. Only active configurations are processed by the scheduler.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>