force-app/main/default/objects/Reminder_Configuration__mdt/fields/Post_Reminder_Days__c.field-meta.xml
<CustomField>
    <fullName>Post_Reminder_Days__c</fullName>
    <description>Comma-separated list of day offsets after the due date to send reminders. e.g. &quot;1,3,7&quot; sends reminders 1 day after, 3 days after, and 7 days after.</description>
    <label>Post Reminder Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>