force-app/main/default/objects/Reminder_Configuration__mdt/fields/Pre_Reminder_Days__c.field-meta.xml
<CustomField>
    <fullName>Pre_Reminder_Days__c</fullName>
    <description>Comma-separated list of day offsets before the due date to send reminders. e.g. &quot;7,3,1&quot; sends reminders 7 days before, 3 days before, and 1 day before.</description>
    <label>Pre Reminder Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>