force-app/main/default/objects/Reminder_Configuration__mdt/fields/Recipient_Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Field_API_Names__c</fullName>
    <description>Comma-separated API names of User or Contact lookup fields directly on the object. Used when Recipient Sources includes FIELD. e.g. &quot;OwnerId,Assigned_To__c&quot;</description>
    <label>Recipient Field API Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>