force-app/main/default/objects/Reminder_Configuration__mdt/fields/Recipient_Related_Field_Paths__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Related_Field_Paths__c</fullName>
    <description>Comma-separated dot-notation paths to User or Contact Id fields via relationships. Used when Recipient Sources includes RELATED_FIELD. e.g. &quot;Account.OwnerId,Project__r.BD_Lead__c&quot;</description>
    <label>Recipient Related Field Paths</label>
    <length>255</length>
    <type>Text</type>
</CustomField>