force-app/main/default/objects/Reminder_Configuration__mdt/fields/Recipient_Sources__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Sources__c</fullName>
    <description>Comma-separated list of recipient source types to use. Valid values: FIELD, RELATED_FIELD, STATIC. e.g. &quot;FIELD,STATIC&quot; or &quot;FIELD,RELATED_FIELD,STATIC&quot;</description>
    <label>Recipient Sources</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>