force-app/main/default/objects/Reminder_Configuration__mdt/fields/Static_Recipient_Emails__c.field-meta.xml
<CustomField>
    <fullName>Static_Recipient_Emails__c</fullName>
    <description>Comma-separated literal email addresses to always include as recipients. Used when Recipient Sources includes STATIC. e.g. &quot;manager@company.com,team@company.com&quot;</description>
    <label>Static Recipient Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>